k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noctipede
  labels:
    name: noctipede
